# Sistema-POS

./: .env.local.example  .gitignore  .~lock.Venstas Pagos.xlsm#  AI_LEEME.md  INSTRUCCIONES_ANDROID.md  README.md  SOLUCION_ANDROID_CIERRE.md  actualizar_app.bat  analizar_pos.py  analyze_excel.js  capacitor.config.json  debug_android.sh  debug_excel.cjs  electron-main.cjs  eslint.config.js  excel_analysis.txt  fix_db_v2.cjs  fix_db_v3.cjs  fix_ids.cjs  index.html  iniciar_app.bat  iniciar_linux.sh  iniciar_linux_bg.sh  iniciar_pos.sh  iniciar_windows_UNICO.bat  instalar_android_pc.sh  instalar_final.sh  instalar_fix_datos.sh  isMobile_context.txt  isMobile_search.txt  limpiar_duplicados.sh  local_db.json  mobile_search_all.txt  output.txt  package-lock.json  package.json  patch_plugin.sh  preparar_apk.sh  setup_termux.sh  smart_install.sh  (+7 more)
android/: new.sh
android/app/: build.gradle  build.gradle.bak
android/app/src/main/cpp/nodejs-mobile/: CMakeLists.txt
data/: server_db.json
nodejs-project/: main.js  package-lock.json  package.json
nodejs-project/server/: index.js  index.mjs  package.json  updater.js  updater.mjs
public/: nodejs-init.js
scripts/: clean_duplicate_categories.js  fix_screenshot.sh
server/: index.js  local_db.json  package-lock.json  package.json  start_android.sh  updater.js
src/: App.css  App.css.backup  App.jsx  index.css  main.jsx
src/components/: BulkUpdateModal.jsx  CartSidebar.jsx  CashDenominationModal.jsx  ClientSearchModal.jsx  DataTable.jsx  EncryptionKeyPrompt.jsx  ErrorBoundary.jsx  (+7 more)
temp_android/: index.mjs  updater.mjs
(+54 files in other folders)
